Implement basic login communication with auth service.
Add all dependencies, including Security and Flux.
Copy-paste dtos needed for communication.
Add auth controller and service.
Add basic SecurityConfig.
Add .http files for easy API calls.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,8 @@ spring:
       hibernate:
         format_sql: true
     show-sql: true
+server:
+  port: 9002
+auth:
+  service:
+    url: http://localhost:9000
