--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,7 @@ server:
 auth:
   service:
     url: http://localhost:9000
+jwt:
+  secret: ${JWT_SECRET:default_secret_key_which_should_be_very_long_in_production}
+  access-token-expiration: 3600000  # 1 hour
+  refresh-token-expiration: 86400000 # 24 hours
