--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: be
+    name: coursy-platforms
   datasource:
     url: jdbc:postgresql://localhost:5432/coursy-db
     username: postgres
