--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: coursy-platforms
   datasource:
-    url: jdbc:postgresql://localhost:5432/coursy-db
+    url: jdbc:postgresql://localhost:5432/platforms_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -10,11 +10,7 @@ spring:
     hibernate:
       ddl-auto: update
 server:
-  port: 9002
+  port: 8080
 auth:
   service:
     url: http://localhost:9000
-jwt:
-  secret: ${JWT_SECRET:default_secret_key_which_should_be_very_long_in_production}
-  access-token-expiration: 3600000  # 1 hour
-  refresh-token-expiration: 86400000 # 24 hours
